# django-nepal

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
djangonepal/: admin.py  apps.py  models.py
djangonepal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
djangonepal/scripts/: geo-data.csv  load_data.py
