[metadata]
name = djangonepal
version = 0.0.9
description = A Django app that provides choices for adminstrative bodies of Nepal.
long_description = file: README.rst
url = https://github.com/AtitBimali/django-nepal
author = Atit Bimali
author_email = atitbimali@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9   
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true + MANIFEST.in
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.0
    django-extensions >=3.2.0  